--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body id="playButton">
     <h3 data-text="Bảo An. Cậu giữ trái tim này nhé">Bảo An. Cậu giữ trái tim này nhé</h3>
     <audio id="audioPlayer" src="./mt.mp3"></audio> 
-    <!-- <script src="./js/three.min.js"></script> -->
+    <script src="./js/three.min.js"></script>
     <script src="./js/MeshSurfaceSampler.js"></script>
     <script src="./js/TrackballControls.js"></script>
     <script src="./js/simplex-noise.js"></script>
